syntax = "proto3";

import "ProtoServices/StatusInvest/RequestResponse/ListAction.proto";
import "ProtoServices/StatusInvest/RequestResponse/ListFII.proto";

option csharp_namespace = "Example.GRPC.API.ApplicationCore.ProtoServices.StatusInvest";

service StatusInvest {
  rpc ListAction (Empty) returns (ReturnAction);
  rpc ListFII (Empty) returns (ReturnFII);
}

message Empty {}